# TinkerTab

./: .clang-format  .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GLOSSARY.md  LEARNINGS.md  LICENSE  README.md  SECURITY.md  STATUS.md  STREAMING_ARCHITECTURE.md  UI_AUDIT.md  diagram.json  dragon_server.py  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.linux  sdkconfig.local.example  wokwi.toml
.github/workflows/: build.yml  clang-format.yml  host-tests.yml
.nyc_output/processinfo/: 3596fabd-4a40-407b-84d4-e80bf37a0d13.json  d8e294c1-561b-4d40-9351-22d74cfdb080.json  index.json
.superpowers/brainstorm/ui-overhaul-v4/: 01-instrument.html  02-almanac.html  03-console.html  AUDIT-reconciliation-2026-04-20.md  AUDIT-reconciliation-dragon-2026-04-20.md  A_monolith.html  B_editorial.html  C_console.html  PROGRESS.md  README.md  RESEARCH-pipecat-livekit.md  STORIES-GAUNTLET.md  a-orb-sovereign.html  b-editorial-horizon.html  c-ambient-canvas.html  keyboard-audit-2026-04-23.md  r2-dial.html  r2-teletype.html  r2-well.html
.superpowers/brainstorm/ui-overhaul-v5/: home.html  system.html
bsp/tab5/: CMakeLists.txt  audio.c  battery.c  battery.h  bluetooth.c  bluetooth.h  bmi270_config.c  bmi270_config.h  bsp_config.h  camera.c  camera.h  display.c  display.h  imu.c  imu.h  io_expander.c  mic.c  tab5_rtc.c  tab5_rtc.h  touch.c  uart_port_c.c  uart_port_c.h
components/espressif__eppp_link/: CMakeLists.txt
components/espressif__esp_codec_dev/: CMakeLists.txt
components/espressif__esp_hosted/: CMakeLists.txt
components/espressif__esp_lcd_touch/: CMakeLists.txt
components/espressif__esp_lcd_touch_st7123/: CMakeLists.txt
components/espressif__esp_serial_slave_link/: CMakeLists.txt
components/espressif__esp_wifi_remote/: CMakeLists.txt
components/espressif__mdns/: CMakeLists.txt
components/hal_linux/: CMakeLists.txt  stubs.c  ui_core_linux.c
components/hal_linux/include/: audio_codec_data_if.h  esp_lcd_panel_ops.h  esp_wifi.h
components/hal_linux/include/driver/: i2c_master.h  i2s_types.h
docs/: AUDIT-architecture-2026-05-01.md  AUDIT-k144-chain-2026-04-29.md  AUDIT-state-of-stack-2026-05-11.md  AUDIT-ui-ux-2026-04-29.md  CHANGELOG.md  HARDWARE.md  PLAN-agent-mode-notification-surface.md  PLAN-feature-audit-waves.md  PLAN-grove.md  PLAN-k144-chain-hardening.md  PLAN-k144-recovery.md  PLAN-m5-llm-module.md  PLAN-ui-ux-hardening.md  PLAN-widget-platform.md  RETRO-feature-audit-waves.md  STABILITY-INVESTIGATION.md  STASH_INDEX.md  UI-COMPLETENESS.md  VOICE_PIPELINE.md  WIDGETS.md  dev-setup.md  hardware-mods.md  stt-tts-research.md
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/deploy/: Caddyfile  tinker-local-alias.service  tinkertab-docs.avahi.service  tinkertab-docs.service
docs-site/docs/: changelog.md  contributing.md  glossary.md  intro.md  troubleshooting.md
docs-site/docs/architecture/: cross-modal.md  (+5 more)
docs-site/scripts/: sync-tinkerbox.sh
docs/adr/: 0000-template.md  0001-host-test-infra-pattern.md  README.md
docs/historical/: README.md  STREAMING_ARCHITECTURE.md
dragon_voice/: README.md  __init__.py  __main__.py  config.py  config.yaml  pipeline.py  requirements.txt  server.py
dragon_voice/llm/: __init__.py  base.py  lmstudio_llm.py  ollama_llm.py  openrouter_llm.py
dragon_voice/stt/: __init__.py  base.py  moonshine_stt.py  vosk_stt.py  whisper_cpp.py
dragon_voice/tts/: __init__.py  base.py  edge_tts_backend.py  kokoro_tts.py  piper_tts.py
main/: CMakeLists.txt  Kconfig.projbuild  afe.c  afe.h  audio.c  audio.h  battery.c  camera.c  chat_header.c  chat_header.h  chat_input_bar.c  chat_input_bar.h  chat_msg_store.c  chat_msg_store.h  chat_msg_view.c  chat_msg_view.h  chat_session_drawer.c  chat_session_drawer.h  chat_suggestions.c  chat_suggestions.h  config.h  debug_obs.c  debug_obs.h  debug_server.c  debug_server.h  debug_server_admin.c  debug_server_admin.h  debug_server_call.c  debug_server_call.h  debug_server_camera.c  debug_server_camera.h  debug_server_chat.c  debug_server_chat.h  debug_server_codec.c  debug_server_codec.h  debug_server_dictation.c  debug_server_dictation.h  debug_server_inject.c  debug_server_inject.h  debug_server_input.c  (+173 more)
main/fonts/: fraunces_italic_22.c  fraunces_italic_32.c  jetbrains_mono_medium_14.c
patches/: lvgl-get-next-line-bounds.patch
sim/: .gitignore  CMakeLists.txt  Makefile  lv_conf.h  main.c  mem_tracker.c  stubs.c  ui_core_sim.c
sim/port/: audio_codec_data_if.h  esp_cache.h  esp_err.h  esp_event.h  esp_heap_caps.h  esp_lcd_panel_ops.h  esp_log.h  esp_netif.h  esp_system.h  esp_task_wdt.h  esp_timer.h  esp_wifi.h
sim/port/driver/: i2c_master.h  i2s_types.h
sim/port/freertos/: FreeRTOS.h  semphr.h  task.h
stitch-designs/: ai-page.html  design-system.md  dragon-page.html  fetch-v3.mjs  gen-v3-final.mjs  gen-v3-remaining.mjs  gen-v3.cjs  gen-v3.mjs  generate-v3.mjs  package-lock.json  package.json  settings-page.html  tools-page.html  ui-ux-deep-research.md  ui-ux-research.md
stitch-designs/inspiration/: INDEX.md
stitch-designs/v2/: apps.html  dragon.html  home.html  settings.html
stitch-designs/v3/: apps-design-system.md  apps.html  dragon-design-system.md  dragon.html  home-design-system.md  home.html  settings-design-system.md  settings.html
stitch-designs/v4/: apps.html  dragon.html  home.html  settings.html
stitch-designs/v5/: apps.html  dragon.html  home.html  settings.html
test/e2e/: E2E_TEST_SPECIFICATION.md  README.md  conftest.py  pytest.ini  requirements.txt  test_baseline.py  test_hardware.py  test_userstory.py
tests/: e2e_test.sh
tests/e2e/: .gitignore  README.md  audit_tinkerclaw.py  discover.py  driver.py  nightly.sh  runner.py  touch_stress.py  wave_acceptance.py
tests/host/: CMakeLists.txt  esp_shims.h  test_md_strip.c  test_openrouter_sse.c  test_spring_anim.c  test_voice_dictation.c
tests/host/shim/: esp_err.h  esp_heap_caps.h  esp_log.h
tests/host/shim/freertos/: FreeRTOS.h  semphr.h
tools/: apply_patches.sh
(+93 files in other folders)
